--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vicons/ionicons4": "^0.12.0",
+    "axios": "^1.4.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
