--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@vicons/ionicons5": "^0.12.0",
         "axios": "^1.4.0",
         "chart.js": "3.3.2",
+        "dotenv": "^16.1.4",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
         "primevue": "3.28.0",
