--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "^1.4.0",
         "chart.js": "3.3.2",
         "dotenv": "^16.1.4",
+        "pinia": "^2.1.4",
         "primeflex": "^3.2.1",
         "primeicons": "^6.0.1",
         "primevue": "3.28.0",
